fix nowplaying progress bar visibility

--- a/src/components/visualizer/visualizers.scss
+++ b/src/components/visualizer/visualizers.scss
@@ -1,5 +1,5 @@
-#barSurfer>div.mdl-slider-background-flex-container,
-#barSurfer>input.nowPlayingBarPositionSlider,
+div.mdl-slider-background-flex-container,
+input.nowPlayingBarPositionSlider,
 #barSurfer>div.sliderBubbleTrack #inputSurfer[hidden],
 #barSurfer[hidden] ::part(wrapper) {
     display: none;
